# liftlab

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
cmake/: FindDependencies.cmake
src/: LiftLab.cpp  airfoil.cpp  airfoil.h  gui.cpp  gui.h  main.cpp  nurbs.cpp  nurbs.h  nurbs_renderer.cpp  nurbs_renderer.h  shaders.cpp  shaders.h  window.cpp  window.h  wing.cpp  wing.h
src/core/: Airfoil.cpp  Airfoil.h  Wing.cpp  Wing.h
src/geometry/: Geometry.h  NURBS.cpp  NURBS.h  WingGeometry.h
src/gui/: Camera.h  Controls.h  Drawer.cpp  Drawer.h  ImGuiDrawer.cpp  ImGuiDrawer.h  Window.cpp  Window.h
src/gui/drawables/: InfoPanel.h
src/liftlab/: main.cpp
src/liftlab/core/: airfoil.cpp  airfoil.h  wing.cpp  wing.h
src/liftlab/renderer/: nurbs.cpp  nurbs.h  nurbs_renderer.cpp  nurbs_renderer.h  shader.cpp  shader.h
src/liftlab/ui/: imgui_drawer.cpp  imgui_drawer.h  window.cpp  window.h
src/renderer/: Renderer.cpp  Renderer.h  Shader.cpp
tests/: main.cpp
